# MoviePilot-Help

./: .gitignore  _sidebar.md  index.html  readme.md
Words/: 2025.01.txt  2025.split.txt  2026-tmdb.txt  2026.txt  TV.txt  anime  anime.txt  general.txt  other.txt
docs/: 一般教程.md  其他问题.md  刮削问题.md  功能补充.md  常见报错.md  微信&QQ通知.md  微信通知.md  插件使用.md  插件教程.md  更新软件.md  站点问题.md  订阅问题.md  转移问题.md  近期新问题.md
nonebot/: .env.prod  docker-compose.yml  pyproject.toml
nonebot-plugin/: .env.prod  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
nonebot-plugin/src/plugins/nonebot-plugin-moviepilot/: __init__.py  api.py  command.py  config.py
nonebot/plugins/: sub.py
